--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
 version: 2.1
 
 jobs:
-  - my-test-build:
-      context: v111-kublr-demo
-      docker:
-        - image: circleci/node:4.8.2
-      steps:
-        - checkout
-        - run: echo "hello world"
-        - kublr-auth
+  my-test-build:
+    context: v111-kublr-demo
+    docker:
+      - image: circleci/node:4.8.2
+    steps:
+      - checkout
+      - run: echo "hello world"
+      - kublr-auth
 
 
 commands:
