--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,6 @@ commands:
             -d "password=${<<parameters.kublr-password>>}" \
             "${<<parameters.kublr-endpoint>>}/auth/realms/kublr-ui/protocol/openid-connect/token" | jq -r '.access_token')"
           echo "export KUBLR_TOKEN='${KUBLR_TOKEN}'" >> $BASH_ENV
+          echo "export KUBLR_TOKEN='${KUBLR_TOKEN}'"
+          cat $BASH_ENV
       - run: 'echo Token ${KUBLR_TOKEN}'
