--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,22 +14,35 @@ jobs:
     steps:
       - checkout
       - kublr-api/auth
-      - run: 'echo "KUBLR_TOKEN=${KUBLR_TOKEN:-}"'
+      - run:
+          name: Print Kublr API token
+          command: 'echo "KUBLR_TOKEN=${KUBLR_TOKEN:-}"'
       - kublr-api/call:
           result-env-var: KUBLR_VERSION_JSON
           result-file: kublr-version.json
-      - run: 'echo "KUBLR_VERSION_JSON=${KUBLR_VERSION_JSON:-}"'
-      - run: 'cat kublr-version.json'
+      - run:
+          name: Print Kublr API call results stored in an env var
+          command: 'echo "KUBLR_VERSION_JSON=${KUBLR_VERSION_JSON:-}"'
+      - run:
+          name: Print Kublr API call results stored in a file
+          command: 'cat kublr-version.json'
       - kublr-api/get-cluster-config:
           kublr-space: demo
           kublr-cluster: aws-demo-1
-      - run: 'echo "KUBECONFIG=${KUBECONFIG:-}"'
-      - run: 'cat config'
-      - run: |
-          echo "Kubernetes config in '${KUBECONFIG:-}' file:"
-          cat "${KUBECONFIG:-}"
-      - run: 'curl https://storage.googleapis.com/kubernetes-release/release/v1.10.7/bin/linux/amd64/kubectl > kubectl && chmod a+x kubectl'
-      - run: './kubectl get nodes'
+      - run:
+          name: Print KUBECONFIG env var
+          command: 'echo "KUBECONFIG=${KUBECONFIG:-}"'
+      - run:
+          name: Print Kubernetes config file content
+          command: |
+            echo "Kubernetes config in '${KUBECONFIG:-}' file:"
+            cat "${KUBECONFIG:-}"
+      - run:
+          name: Prepare kubectl tool
+          command: 'curl https://storage.googleapis.com/kubernetes-release/release/v1.10.7/bin/linux/amd64/kubectl > kubectl && chmod a+x kubectl'
+      - run:
+          name: Run kubectl command
+          command: './kubectl get nodes'
 
 orbs:
   kublr-api:
@@ -38,6 +51,7 @@ orbs:
         description: >
           Authenticate with Kublr API with API endpoint, username, and password
           in KUBLR_ENDPOINT, KUBLR_USERNAME, and KUBLR_PASSWORD env vars correspondingly.
+          Normally you would set these environment variables via CircleCI contexts.
           Resulting authentication token is stored in KUBLR_TOKEN env var.
         usage:
           version: 2.1
@@ -109,6 +123,54 @@ orbs:
                     command: 'curl https://storage.googleapis.com/kubernetes-release/release/v1.10.7/bin/linux/amd64/kubectl > kubectl && chmod a+x kubectl'
                 - run:
                     name: 'Test kubectl with kubeconfig'
+                    command: './kubectl get nodes'
+      full_example:
+        description: >
+          This example shows full sequence of operations with Kublr control plane: authentication,
+          API calls (possibly including Kubernetes cluster creation, status checks, deletion etc),
+          acquisition of Kubernetes cluster config file, and download, setup, and using kubectl tool.
+          Authentication with Kublr API relies on the API endpoint, username, and password provided
+          in KUBLR_ENDPOINT, KUBLR_USERNAME, and KUBLR_PASSWORD env vars correspondingly.
+          Normally you would set these environment variables via CircleCI contexts.
+        usage:
+          version: 2.1
+          orbs:
+            foo: kublr/kublr-api@dev
+          jobs:
+            build:
+              docker:
+                - image: circleci/node:9.9.0
+              steps:
+                - checkout
+                - kublr-api/auth
+                - run:
+                    name: Print Kublr API token
+                    command: 'echo "KUBLR_TOKEN=${KUBLR_TOKEN:-}"'
+                - kublr-api/call:
+                    result-env-var: KUBLR_VERSION_JSON
+                    result-file: kublr-version.json
+                - run:
+                    name: Print Kublr API call results stored in an env var
+                    command: 'echo "KUBLR_VERSION_JSON=${KUBLR_VERSION_JSON:-}"'
+                - run:
+                    name: Print Kublr API call results stored in a file
+                    command: 'cat kublr-version.json'
+                - kublr-api/get-cluster-config:
+                    kublr-space: demo
+                    kublr-cluster: aws-demo-1
+                - run:
+                    name: Print KUBECONFIG env var
+                    command: 'echo "KUBECONFIG=${KUBECONFIG:-}"'
+                - run:
+                    name: Print Kubernetes config file content
+                    command: |
+                      echo "Kubernetes config in '${KUBECONFIG:-}' file:"
+                      cat "${KUBECONFIG:-}"
+                - run:
+                    name: Prepare kubectl tool
+                    command: 'curl https://storage.googleapis.com/kubernetes-release/release/v1.10.7/bin/linux/amd64/kubectl > kubectl && chmod a+x kubectl'
+                - run:
+                    name: Run kubectl command
                     command: './kubectl get nodes'
     commands:
       auth:
